@startuml Chat_ERD

' Định nghĩa entities
entity "User" as user {
  * id : BIGINT <<PK>>
  --
  * email : VARCHAR(255)
  * password : VARCHAR(255)
  * full_name : VARCHAR(100)
  avatar : VARCHAR(500)
  phone : VARCHAR(20)
  is_active : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "Chat" as chat {
  * id : BIGINT <<PK>>
  --
  * chat_type : VARCHAR(20)
  chat_name : VARCHAR(100)
  last_message_content : VARCHAR(500)
  last_message_at : TIMESTAMP
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "UserChat" as user_chat {
  * id : BIGINT <<PK>>
  --
  * user_id : BIGINT <<FK>>
  * chat_id : BIGINT <<FK>>
  * unread_count : INT
  * is_active : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "Message" as message {
  * id : BIGINT <<PK>>
  --
  * chat_id : BIGINT <<FK>>
  * sender_id : BIGINT <<FK>>
  * content : TEXT
  * is_read : BOOLEAN
  read_at : TIMESTAMP
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

' Định nghĩa quan hệ
user ||--o{ user_chat : "has many"
chat ||--o{ user_chat : "has many"
chat ||--o{ message : "contains"
user ||--o{ message : "sends"

' Ghi chú
note right of user_chat
  **Bảng trung gian Many-to-Many**
  - Mỗi user có thể tham gia nhiều chats
  - Mỗi chat có thể có nhiều users
  - Lưu unread_count riêng cho mỗi user
  - is_active: User còn trong chat không
end note

note right of chat
  **Chat Types**
  - DIRECT: Chat 1-1 (2 users)
  - GROUP: Chat nhóm (>2 users)
  
  **Fields**
  - chat_name: NULL cho DIRECT,
    có giá trị cho GROUP
end note

@enduml
